# Vid2Text-Skill

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README-zh-CN.md  README.md  SKILL.md  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml  release-skill.yml  release.yml
docs/: architecture-zh-CN.md  architecture.md  asr.md  cli.md  dev.md  downloader.md  errors.md  mvp-plan.md  packaging.md  prd.md  transcoder.md
scripts/: build_skill.py  gen_fixture.py
tests/: test_asr.py  test_cache.py  test_cli.py  test_downloader.py  test_e2e.py  test_errors.py  test_integration.py  test_pipeline.py  test_recognizer.py  test_smoke.py  test_transcoder.py  test_utils.py
vid2text/: asr.py  cache.py  cli.py  downloader.py  errors.py  pipeline.py  recognizer.py  transcoder.py  utils.py
