[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vid2text"
version = "0.1.0"
description = "Video link to text transcription CLI, distributable as a .skill"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1",
  "yt-dlp>=2024.0.0",
  "funasr>=1.0.27",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "pyright>=1.1"]

[project.scripts]
vid2text = "vid2text.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vid2text"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
