[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vid2text"
version = "0.1.0"
description = "从 B站视频链接提取音频并转写为纯文本"
requires-python = ">=3.10"
dependencies = [
    "funasr_onnx>=0.4",
    "modelscope>=1.30",
    "click>=8.1",
    "tqdm>=4.66",
]

[project.scripts]
vid2text = "vid2text.cli:main_entry"

[tool.setuptools]
packages = ["vid2text"]

[tool.pytest.ini_options]
testpaths = ["tests"]
